--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "n8n-nodes-miniflux",
   "version": "0.0.1",
-  "description": "",
+  "description": "Connect n8n to your Miniflux feed reader",
   "keywords": [
     "n8n-community-node-package",
     "n8n-node-athon"
