--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-miniflux",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Connect n8n to your Miniflux feed reader",
   "keywords": [
     "n8n-community-node-package",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/html-to-text": "^8.1.1",
     "@types/request-promise-native": "~1.0.15",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint-plugin-n8n-nodes-base": "^1.5.4",
@@ -48,5 +49,8 @@
     "prettier": "^2.7.1",
     "tslint": "^6.1.2",
     "typescript": "~4.6.0"
+  },
+  "dependencies": {
+    "html-to-text": "^8.2.1"
   }
 }
