--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "n8n-nodes-miniflux",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "description": "Connect n8n to your Miniflux feed reader",
   "keywords": [
-    "n8n-community-node-package",
-    "n8n-node-athon"
+    "n8n-community-node-package"
   ],
   "license": "MIT",
   "homepage": "https://github.com/that-one-tom/n8n-nodes-miniflux",
@@ -16,14 +15,20 @@
     "type": "git",
     "url": "https://github.com/that-one-tom/n8n-nodes-miniflux.git"
   },
+  "engines": {
+    "node": ">=18.10",
+    "pnpm": ">=9.1"
+  },
+  "packageManager": "pnpm@9.1.4",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
-    "lint": "tslint -p tsconfig.json -c tslint.json && eslint nodes credentials package.json",
-    "lintfix": "tslint --fix -p tsconfig.json -c tslint.json && eslint nodes credentials package.json --fix",
-    "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "lint": "eslint nodes credentials package.json",
+    "lintfix": "eslint nodes credentials package.json --fix",
+    "prepublishOnly": "pnpm build && pnpm lint -c .eslintrc.prepublish.js nodes credentials package.json"
   },
   "files": [
     "dist"
@@ -38,19 +43,19 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/html-to-text": "^8.1.1",
-    "@types/request-promise-native": "~1.0.15",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint-plugin-n8n-nodes-base": "^1.5.4",
+    "@types/html-to-text": "^9.0.4",
+    "@typescript-eslint/parser": "^7.15.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
-    "n8n-core": "^0.125.0",
-    "n8n-workflow": "^0.107.0",
-    "prettier": "^2.7.1",
-    "tslint": "^6.1.2",
-    "typescript": "~4.6.0"
+    "n8n-workflow": "*",
+    "prettier": "^3.3.2",
+    "typescript": "^5.5.3"
+  },
+  "peerDependencies": {
+    "n8n-workflow": "*"
   },
   "dependencies": {
-    "html-to-text": "^8.2.1"
+    "html-to-text": "^9.0.5"
   }
 }
